// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps - Demo Add custom styles through by class named "current" 1`] = `
<div class="md-example-child md-example-child-steps md-example-child-steps-5">
  <div class="md-steps md-steps-horizontal">
    <div class="step-wrapper reached">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width:6px;height:6px;border-radius:50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          登录
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform:translate3d(0%, 0, 0);transition:all 0.3s linear;"></i></div>
    <div class="step-wrapper current">
      <div class="icon-wrapper"><i class="md-icon icon-font md-icon-success md" style="color:;"></i></div>
      <div class="text-wrapper">
        <div class="name">
          开通
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform:translate3d(-100%, 0, 0);transition:all 0s linear;"></i></div>
    <div class="step-wrapper">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width:6px;height:6px;border-radius:50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          验证
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform:translate3d(-100%, 0, 0);transition:all 0s linear;"></i></div>
    <div class="step-wrapper">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width:6px;height:6px;border-radius:50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          成功
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Steps - Demo Basic 1`] = `
<div class="md-example-child md-example-child-steps md-example-child-steps-0">
  <div class="md-steps md-steps-horizontal">
    <div class="step-wrapper current">
      <div class="icon-wrapper"><i class="md-icon icon-font md-icon-success md" style="color:;"></i></div>
      <div class="text-wrapper">
        <div class="name">
          登录/注册
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform:translate3d(-100%, 0, 0);transition:all 0s linear;"></i></div>
    <div class="step-wrapper">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width:6px;height:6px;border-radius:50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          申请征信报告
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform:translate3d(-100%, 0, 0);transition:all 0s linear;"></i></div>
    <div class="step-wrapper">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width:6px;height:6px;border-radius:50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          提取征信报告
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Steps - Demo Complete all steps 1`] = `
<div class="md-example-child md-example-child-steps md-example-child-steps-6">
  <div class="md-steps md-steps-horizontal">
    <div class="step-wrapper reached">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width:6px;height:6px;border-radius:50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          登录
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform:translate3d(0%, 0, 0);transition:all 0.3s linear;"></i></div>
    <div class="step-wrapper reached">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width:6px;height:6px;border-radius:50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          开通
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform:translate3d(0%, 0, 0);transition:all 0.3s linear;"></i></div>
    <div class="step-wrapper reached">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width:6px;height:6px;border-radius:50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          验证
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform:translate3d(0%, 0, 0);transition:all 0.3s linear;"></i></div>
    <div class="step-wrapper current">
      <div class="icon-wrapper"><i class="md-icon icon-font md-icon-success md" style="color:;"></i></div>
      <div class="text-wrapper">
        <div class="name">
          成功
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Steps - Demo Custom content 1`] = `
<div class="md-example-child md-example-child-steps md-example-child-steps-8">
  <div class="md-steps md-steps-vertical no-current">
    <div class="step-wrapper reached current">
      <div class="icon-wrapper"><i class="md-icon icon-font md-icon-checked md"></i></div>
      <div class="text-wrapper">
        <div class="custom-content">
          <p class="name active">还款申请已提交</p>
          <p class="amount"><span class="md-amount numerical">600.50</span>元
          </p>
          <p class="desc">银行处理中，预计<span>30分钟</span>内到账，请留意短信信息。如有疑问，请联系客服。</p>
        </div>
      </div>
    </div>
    <div class="bar vertical-bar"><i class="bar-inner" style="transform: translate3d(0, -50%, 0);"></i></div>
    <div class="step-wrapper">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width: 6px; height: 6px; border-radius: 50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="custom-content">
          <p class="name">还款成功</p>
        </div>
      </div>
    </div>
    <div class="bar vertical-bar">
      <!---->
    </div>
  </div>
  <div class="md-steps md-steps-vertical">
    <div class="step-wrapper reached">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width: 6px; height: 6px; border-radius: 50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="custom-content">
          <p class="name">还款申请已提交</p>
        </div>
      </div>
    </div>
    <div class="bar vertical-bar"><i class="bar-inner" style="transform: translate3d(0, 0%, 0);"></i></div>
    <div class="step-wrapper current">
      <div class="icon-wrapper"><i class="md-icon icon-font md-icon-checked md"></i></div>
      <div class="text-wrapper">
        <div class="custom-content">
          <p class="name active">还款成功</p>
          <p class="amount"><span class="md-amount numerical">600.50</span>元
          </p>
        </div>
      </div>
    </div>
    <div class="bar vertical-bar">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Steps - Demo Custom step icon 1`] = `
<div class="md-example-child md-example-child-steps md-example-child-steps-2">
  <div class="md-steps md-steps-horizontal">
    <div class="step-wrapper reached">
      <div class="icon-wrapper">
        <div class="step-node-default"></div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          登录
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform:translate3d(0%, 0, 0);transition:all 0.3s linear;"></i></div>
    <div class="step-wrapper reached">
      <div class="icon-wrapper"><i class="md-icon icon-font md-icon-checked md" style="color:;"></i></div>
      <div class="text-wrapper">
        <div class="name">
          开通
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform:translate3d(0%, 0, 0);transition:all 0.3s linear;"></i></div>
    <div class="step-wrapper current">
      <div class="icon-wrapper"><i class="md-icon icon-font md-icon-location md" style="color:;"></i></div>
      <div class="text-wrapper">
        <div class="name">
          验证
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform:translate3d(-100%, 0, 0);transition:all 0s linear;"></i></div>
    <div class="step-wrapper">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width:6px;height:6px;border-radius:50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          成功
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Steps - Demo Non-integer progress 1`] = `
<div class="md-example-child md-example-child-steps md-example-child-steps-1">
  <div class="md-steps md-steps-horizontal no-current">
    <div class="step-wrapper reached">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width:6px;height:6px;border-radius:50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          登录
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform:translate3d(0%, 0, 0);transition:all 0.3s linear;"></i></div>
    <div class="step-wrapper reached current">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width:6px;height:6px;border-radius:50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          开通
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform:translate3d(-80%, 0, 0);transition:all 0.059999999999999984s linear;"></i></div>
    <div class="step-wrapper">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width:6px;height:6px;border-radius:50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          验证
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform:translate3d(-100%, 0, 0);transition:all 0s linear;"></i></div>
    <div class="step-wrapper">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width:6px;height:6px;border-radius:50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          成功
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Steps - Demo Specify the current step 1`] = `
<div class="md-example-child md-example-child-steps md-example-child-steps-3">
  <div class="md-steps md-steps-horizontal">
    <div class="step-wrapper current">
      <div class="icon-wrapper"><i class="md-icon icon-font md-icon-success md"></i></div>
      <div class="text-wrapper">
        <div class="name">
          登录
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform: translate3d(-100%, 0, 0);"></i></div>
    <div class="step-wrapper">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width: 6px; height: 6px; border-radius: 50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          开通
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform: translate3d(-100%, 0, 0);"></i></div>
    <div class="step-wrapper">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width: 6px; height: 6px; border-radius: 50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          验证
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform: translate3d(-100%, 0, 0);"></i></div>
    <div class="step-wrapper">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width: 6px; height: 6px; border-radius: 50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          成功
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Steps - Demo Transition of rogress changes 1`] = `
<div class="md-example-child md-example-child-steps md-example-child-steps-4">
  <div class="md-steps md-steps-horizontal no-current">
    <div class="step-wrapper reached">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width: 6px; height: 6px; border-radius: 50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          登录
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform: translate3d(0%, 0, 0);"></i></div>
    <div class="step-wrapper reached current">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width: 6px; height: 6px; border-radius: 50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          开通
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform: translate3d(-50%, 0, 0);"></i></div>
    <div class="step-wrapper">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width: 6px; height: 6px; border-radius: 50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          验证
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar"><i class="bar-inner" style="transform: translate3d(-100%, 0, 0);"></i></div>
    <div class="step-wrapper">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width: 6px; height: 6px; border-radius: 50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          成功
        </div>
        <!---->
      </div>
    </div>
    <div class="bar horizontal-bar">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Steps - Demo Vertical display 1`] = `
<div class="md-example-child md-example-child-steps md-example-child-steps-7">
  <div class="md-steps md-steps-vertical vertical-adaptive">
    <div class="step-wrapper reached">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width:6px;height:6px;border-radius:50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          登录
        </div>
        <div class="desc">
          这是登录的描述
        </div>
      </div>
    </div>
    <div class="bar vertical-bar"><i class="bar-inner" style="transform:translate3d(0, 0%, 0);transition:all 0.3s linear;"></i></div>
    <div class="step-wrapper current">
      <div class="icon-wrapper"><i class="md-icon icon-font md-icon-success md" style="color:;"></i></div>
      <div class="text-wrapper">
        <div class="name">
          开通
        </div>
        <div class="desc">
          这是开通的描述
        </div>
      </div>
    </div>
    <div class="bar vertical-bar"><i class="bar-inner" style="transform:translate3d(0, -100%, 0);transition:all 0s linear;"></i></div>
    <div class="step-wrapper">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width:6px;height:6px;border-radius:50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          验证
        </div>
        <div class="desc">
          这是验证的描述
        </div>
      </div>
    </div>
    <div class="bar vertical-bar"><i class="bar-inner" style="transform:translate3d(0, -100%, 0);transition:all 0s linear;"></i></div>
    <div class="step-wrapper">
      <div class="icon-wrapper">
        <div class="step-node-default">
          <div class="step-node-default-icon" style="width:6px;height:6px;border-radius:50%;"></div>
        </div>
      </div>
      <div class="text-wrapper">
        <div class="name">
          成功
        </div>
        <div class="desc">
          这是成功的描述
        </div>
      </div>
    </div>
    <div class="bar vertical-bar">
      <!---->
    </div>
  </div>
</div>
`;
